# docs/swagger.yaml
@@ -102,9 +102,13 @@ paths:
         type: integer
       responses:
         "200":
-          description: OK
+          description: id not found
           schema:
-            $ref: '#/definitions/models.Todo'
+            type: string
+        "404":
+          description: id not found
+          schema:
+            type: string
       summary: delete todo
       tags:
       - todos
